<resources>
    <string name="app_name">161054</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_emergency_contacts">Emergency Contacts</string>
    <string name="title_emergency_contacts_short">Emerge. Contacts</string>

    <string name="latitude_label">Latitude: %f</string>
    <string name="longitude_label">Longitude: %f</string>

    <string name="title_activity_maps">MapsActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_full_name">Contact Full Name</string>
    <string name="contact_phone_number">Contact Phone number</string>
    <string name="profile">Profile</string>
    <string name="phone_number">Phone number</string>
    <string name="area_code">Area Code</string>
    <string name="_268">+268</string>
    <string name="register">Register</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="user_full_name">Full Name</string>
    <string name="user_id">Personal ID Number</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="report_emergency">REPORT EMERGENCY</string>
    <string name="try_again">Try Again</string>
    <string name="no_connection">No connection</string>
    <string name="view_in_map">View in Map</string>

    <!-- Vosk Strings -->
    <string name="recognize_file">Recognize File</string>
    <string name="recognize_microphone">Recognize Microphone</string>
    <string name="stop_microphone">Stop Microphone</string>
    <string name="preparing">Preparing the recognizer\n</string>
    <string name="ready">Ready\n</string>
    <string name="failed">Failed to init recognizer %s\n</string>
    <string name="elapsed">Result %s elapsed %d milliseconds\n</string>
    <string name="starting">Starting\n</string>
    <string name="say_something">Say something\n</string>
    <string name="stop_file">Stop File</string>
    <string name="pause">Pause</string>
    <string name="continueRecognition">Continue</string>
</resources>