<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_emergency_contacts"
        android:icon="@drawable/ic_emergency_contacts"
        android:title="@string/title_emergency_contacts_short" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />

</menu>

<!--
When setting separate navGraph stacks
1. In menu resource point to navGraph file,
2. In MainActivity point to startDestination fragment
-->
