<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/statusContainer"
    android:orientation="vertical"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_weather"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/no_connection" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_again"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="50dp"
        android:paddingVertical="10dp"
        app:cornerRadius="15dp"
        android:id="@+id/retryButton" />

</LinearLayout>