<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="24dp">

    <org.xhanka.ndm_project.utils.CircleImageView
        android:layout_marginTop="70dp"
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/ic_splash_new"
        app:civ_border_width="2dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/userEmailContainer"
        android:id="@+id/logo"
        app:civ_border_color="#FFDEDDE1"
        android:contentDescription="@string/app_name"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"

        android:id="@+id/userEmailContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/user_email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userEmailContainer"

        android:id="@+id/userPasswordContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/user_password" />

    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userPasswordContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonFrame"
        android:layout_marginTop="10dp">

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:text="Sign In"
        app:cornerRadius="20dp"
        android:id="@+id/logUserIn" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:trackColor="@color/purple_700"
            app:indicatorColor="@color/white"
            android:indeterminate="true"
            android:visibility="invisible"
            android:layout_gravity="center"
            android:id="@+id/progressBar"
            app:layout_constraintTop_toBottomOf="@id/promptText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </FrameLayout>

    <LinearLayout
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="Don't have an account?"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:paddingVertical="0dp"
            android:layout_marginVertical="0dp"
            android:layout_height="match_parent"
            android:text="Register"
            android:textAlignment="textEnd"
            android:layout_weight="1"
            android:id="@+id/goToRegisterAccount"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>